# Go_compiler

./: CMakeCache.txt  CMakeLists.txt  Gocompiler  Makefile  README.md  cmake_install.cmake  commands.txt  todo  tokens.h
includes/ASB/: asb.hpp  declaration.hpp  expression.hpp  stament.hpp  statment.hpp  types.hpp
includes/Interpreting/: interpreting.hpp  interpretoperand.hpp  valuedescriptor.hpp
includes/Lexer/: go.lex
includes/Parser/: parse.y  parser.hpp
includes/Typechecking/: Typechecking.hpp
includes/Visitor/: Visitor.hpp  typechecker.hpp  typedescriptor.hpp  visiting.hpp
includes/lexer/: lexer.hpp
includes/other/: linkedlist.hpp  stack.hpp  symboltable.hpp
src/: lexer.c  lexer.h  main.cpp
src/ASB/: asb.cpp  declaration.cpp  expression.cpp  statment.cpp  types.cpp
src/Interpreting/: interpreting.cpp  valuedescriptor.cpp
src/Lexer/: go.l  lex.yy.c  lexer.cpp
src/Parser/: parser.cpp  parser.output
src/Visitor/: typechecker.cpp  typedescriptor.cpp  visiting.cpp
test/: File.go  check.go  demo1.go  demo_error.go  demo_rec.go  demo_ret.go  demo_string.go  example.go  example1.go  examplerec.go  expo.go  fib.go  forloops.go  test.go  test1.go  test2.go  test3.go  testother.go
